--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -4,7 +4,7 @@ name: Build README
 # Run workflow at 12:01 on Sunday, Wednesday, and Friday
 on:
   schedule:
-    - cron: '* * * * *'
+    - cron: "* * * * *"
   # Run workflow on pushes to main branch
   push:
     branches:
@@ -18,32 +18,32 @@ jobs:
 
     # Checkout repo code
     steps:
-    - name: Checkout repo
-      uses: actions/checkout@v2
+      - name: Checkout repo
+        uses: actions/checkout@v2
 
-    # Install node
-    - name: Use Node.js
-      uses: actions/setup-node@v1
-      with:
-        node-version: 10.16
-    - run: npm install
-    - run: npm run build --if-present
-    - run: npm test
-      env:
-        CI: true
+      # Install node
+      - name: Use Node.js
+        uses: actions/setup-node@v1
+        with:
+          node-version: 10.16
+      - run: npm install
+      - run: npm run build --if-present
+      - run: npm test
+        env:
+          CI: true
 
-    # Run script "updateReadme.js" 
-    - name: Update README
-      run: |-
-        node updateReadme.js
-        cat README.md
+      # Run script "updateReadme.js"
+      - name: Update README
+        run: |-
+          node updateReadme.js
+          cat README.md
 
-    # Commit changes
-    - name: Commit and push if changed
-      run: |-
-        git diff
-        git config --global user.email "petterblaasmo@gmail.com"
-        git config --global user.name "petterblaasmo"
-        git add -A
-        git commit -m "Updated ReadME" || exit 0
-        git push
+      # Commit changes
+      - name: Commit and push if changed
+        run: |-
+          git diff
+          git config --global user.email "petterblaasmo@gmail.com"
+          git config --global user.name "petterblaasmo"
+          git add -A
+          git commit -m "Updated" || exit 0
+          git push
